20240527-012117：➕𬎆；➖数据、申请、业务。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -7150,7 +7150,6 @@ bilibili	blbl
 编译器	bxyq
 编译器	bxyu
 编印	bxyw
-保险业务	bxyw
 比下有余	bxyy
 不幸言中	bxyz
 必先与之	bxyz
@@ -11032,7 +11031,6 @@ bilibili	blbl
 插秧	ckyt
 撑腰	ckyv
 抄用	ckyw
-存款业务	ckyw
 抽验	ckyx
 持有者	ckyz
 插足	ckz
@@ -12769,7 +12767,6 @@ bilibili	blbl
 传输速度	cssd
 车速	cssf
 车市	cssh
-传输数据	cssj
 车手	cssk
 车身	cssr
 残山剩水	csss
@@ -32647,7 +32644,6 @@ GPS	gps
 姑爷	gsym
 根深叶茂	gsym
 孤身一人	gsyr
-公司业务	gsyw
 肝肾阴虚	gsyx
 高山仰止	gsyz
 姑丈	gsza
@@ -42027,7 +42023,6 @@ GTP	gtp
 朝阳	ifyv
 再用	ifyw
 正因为	ifyw
-支付业务	ifyw
 髭	ifyw
 职业性	ifyx
 直痒痒	ifyy
@@ -55681,7 +55676,6 @@ GTP	gtp
 救人一命胜造七级浮屠	jryt
 皎月	jryv
 拒人于千里之外	jryw
-金融业务	jryw
 井然有序	jryx
 佳人有约	jryy
 金融资本	jrzb
@@ -60351,7 +60345,6 @@ GTP	gtp
 跨越式	kiys
 跨越	kiyu
 啃	kiyv
-开展业务	kiyw
 咖	kiz
 喀左	kiza
 咖	kizi
@@ -62255,7 +62248,6 @@ GTP	gtp
 空中小姐	kzxj
 控制系统	kzxt
 看在眼里	kzyl
-开展业务	kzyw
 可造之材	kzzc
 扩展总线接口	kzzk
 控制中心	kzzx
@@ -104031,7 +104023,6 @@ NFC	nfc
 璞玉	pgyg
 跑官要官	pgyg
 评估意见	pgyj
-评估业务	pgyw
 琲	pgyy
 评估指标	pgzb
 评估资产	pgzc
@@ -111369,7 +111360,6 @@ QQ密码	qqmm
 乔伊斯	qtys
 迁移	qtyt
 秋月	qtyv
-洽谈业务	qtyw
 签约	qtyx
 签章	qtz
 千纸鹤	qtz
@@ -112547,7 +112537,6 @@ QQ密码	qqmm
 如出一辙	rcyi
 如此一来	rcyl
 日常用品	rcyp
-日常业务	rcyw
 日长一线	rcyx
 如出一辙	rcyz
 如此这般	rczb
@@ -114913,10 +114902,8 @@ QQ密码	qqmm
 绒	rxs
 绒	rxsa
 任贤使能	rxsn
-入学申请	rxsq
 入乡随俗	rxss
 绕舌	rxst
-入学申请	rxsu
 人心所向	rxsx
 如下特点	rxtd
 入学通知	rxti
@@ -118616,7 +118603,6 @@ QQ密码	qqmm
 什么是	sjms
 闪米特	sjmt
 什么	sjmw
-数据模型	sjmx
 什么样	sjmy
 什么呀	sjmy
 什么也	sjmy
@@ -118722,7 +118708,6 @@ QQ密码	qqmm
 舒坦	sjtu
 伸腿	sjtv
 侁	sjtw
-数据通信	sjtx
 三级跳远	sjty
 神经调质	sjtz
 仕	sju
@@ -118778,7 +118763,6 @@ QQ密码	qqmm
 尚须	sjxq
 伸向	sjxr
 伤心事	sjxs
-数据显示	sjxs
 傻笑	sjxt
 神经系统	sjxt
 伺隙	sjxv
@@ -121634,9 +121618,7 @@ QQ密码	qqmm
 所定	sqdn
 所得税	sqds
 所短	sqdt
-申请单位	sqdw
 所点	sqdy
-申请额度	sqed
 三七二十一	sqey
 授权发布	sqfb
 食前方丈	sqfi
@@ -121654,7 +121636,6 @@ QQ密码	qqmm
 所感	sqga
 三期工程	sqgc
 艄公	sqgm
-申请购买	sqgm
 所归	sqgp
 所管	sqgt
 鼠窃狗偷	sqgt
@@ -121674,7 +121655,6 @@ QQ密码	qqmm
 深情厚谊	sqhy
 所知	sqi
 所在	sqia
-申请注册	sqic
 所在地	sqid
 所著	sqie
 所载	sqif
@@ -121692,16 +121672,13 @@ QQ密码	qqmm
 所讲	sqjl
 所举	sqjn
 所见	sqjo
-申请加入	sqjr
 所接受	sqjs
 艄	sqjv
 所及	sqjw
-申请开办	sqkb
 盛情款待	sqkd
 所考	sqkf
 所看	sqkk
 所困	sqko
-申请课题	sqkt
 所罗门	sql
 所列	sqla
 三亲六故	sqlg
@@ -121728,13 +121705,10 @@ QQ密码	qqmm
 双拳难敌四手	sqns
 舢	sqo
 舢	sqoi
-申请批准	sqpi
 所拍	sqpk
 所怕	sqpn
 所迫	sqpr
-申请批准	sqpz
 所	sqq
-申请取得	sqqd
 所求	sqqf
 所	sqqi
 杀妻求将	sqqj
@@ -121746,7 +121720,6 @@ QQ密码	qqmm
 丧权辱国	sqrg
 孀妻弱子	sqri
 艘	sqrl
-申请日期	sqrq
 身轻如燕	sqry
 孀妻弱子	sqrz
 所涉及	sqs
@@ -121836,7 +121809,6 @@ QQ密码	qqmm
 所有制	sqyz
 所知	sqz
 所在	sqza
-申请注册	sqzc
 所在地	sqzd
 所著	sqze
 所载	sqzf
@@ -123188,8 +123160,6 @@ QQ密码	qqmm
 声调	sudl
 声道	sudm
 竖笛	sudt
-申请单位	sudw
-申请额度	sued
 三七二十一	suey
 寺	suf
 授权发布	sufb
@@ -123204,7 +123174,6 @@ QQ密码	qqmm
 肾功能	sug
 三期工程	sugc
 声光	sugj
-申请购买	sugm
 士官	sugn
 肾功能	sugn
 鼠窃狗偷	sugt
@@ -123223,7 +123192,6 @@ QQ密码	qqmm
 深情厚谊	suhy
 竖子	sui
 声张	suib
-申请注册	suic
 竖直	suif
 士卒	suih
 竖着	suim
@@ -123234,14 +123202,11 @@ QQ密码	qqmm
 竖井	sujg
 埫	suji
 肾精	sujm
-申请加入	sujr
 肾结石	sujs
 肾经	sujx
-申请开办	sukb
 盛情款待	sukd
 肾亏	sukg
 声控	sukk
-申请课题	sukt
 声卡	suky
 士林	sulc
 声浪	suld
@@ -123271,10 +123236,8 @@ QQ密码	qqmm
 螫	suok
 竖排版	supb
 声旁	suph
-申请批准	supi
 竖排	supk
 声频	supy
-申请批准	supz
 竖琴	suqg
 墒情	suqn
 士气	suqt
@@ -123322,7 +123285,6 @@ QQ密码	qqmm
 杀气腾腾	sutt
 身强体壮	sutz
 士	suu
-申请取得	suud
 竖琴	suug
 杀妻求将	suuj
 墒情	suun
@@ -123369,7 +123331,6 @@ QQ密码	qqmm
 首屈一指	suyz
 竖子	suz
 声张	suzb
-申请注册	suzc
 竖直	suzf
 士卒	suzh
 竖着	suzm
@@ -134846,7 +134807,6 @@ QQ密码	qqmm
 迁移	utyt
 氢氧	utyt
 秋月	utyv
-洽谈业务	utyw
 签约	utyx
 气炸	utz
 千丈	utza
@@ -143231,6 +143191,7 @@ u̇	vpug
 消化不良	xhbl
 雪豹	xhbm
 雪崩	xhbo
+新版	xhbr
 雪白	xhbr
 新编	xhbx
 纤毫毕现	xhbx
@@ -144519,10 +144480,8 @@ u̇	vpug
 行署	xkso
 行省	xksp
 小康水平	xksp
-许可申请	xksq
 徇私	xkst
 循声	xksu
-许可申请	xksu
 行色	xksw
 行驶	xksx
 心旷神怡	xksy
@@ -157061,7 +157020,6 @@ u̇	vpug
 意外之财	ywic
 用武之地	ywid
 用者	ywif
-业务主管	ywig
 印章	ywih
 用足	ywii
 用作	ywij
@@ -157136,7 +157094,6 @@ u̇	vpug
 用了	ywlv
 鱼鳞	ywlw
 狁	ywlw
-业务联系	ywlx
 疑虑	ywly
 用力	ywlz
 鳐	ywm
@@ -157176,7 +157133,6 @@ u̇	vpug
 乐谱	ywpl
 鱼皮	ywpn
 鱼片	ywpr
-业务培训	ywpx
 鱼皮	ywpz
 用起来	ywq
 鱼群	ywqb
@@ -157331,7 +157287,6 @@ u̇	vpug
 印象	ywxw
 一物降一物	ywxw
 偃武修文	ywxw
-业务学习	ywxx
 永无休止	ywxz
 怨言	ywy
 用语	ywy
@@ -157369,7 +157324,6 @@ u̇	vpug
 用武之地	ywzd
 飏	ywze
 用者	ywzf
-业务主管	ywzg
 印章	ywzh
 用足	ywzi
 用作	ywzj
@@ -160036,7 +159990,6 @@ u̇	vpug
 朝阳	zfyv
 再用	zfyw
 正因为	zfyw
-支付业务	zfyw
 髭	zfyw
 职业性	zfyx
 直痒痒	zfyy
@@ -167539,7 +167492,6 @@ u̇	vpug
 孜孜以求	zzyq
 主治医师	zzys
 孜孜以求	zzyu
-增值业务	zzyw
 遮遮掩掩	zzyy
 睁只眼闭只眼	zzyy
 总政治部	zzzb
