--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -416,7 +416,9 @@ ADP	adp
 阿姆斯特朗	amsl
 阿弥陀佛	amtf
 爱徒	amtk
+澳门特区	amtq
 澳门特别行政区	amtq
+澳门特区	amtu
 澳门特别行政区	amtu
 爱犬	amua
 爱琴海	amuh
@@ -143069,7 +143071,9 @@ u̇	vpug
 邢台	xgtl
 形同	xgto
 心广体胖	xgtp
+香港特区	xgtq
 香港特别行政区	xgtq
+香港特区	xgtu
 香港特别行政区	xgtu
 形态学	xgtx
 型	xgu
