20240527-032624：增加小鹤双拼配置。

--- a/rime/default.custom.yaml
+++ b/rime/default.custom.yaml
@@ -7,6 +7,7 @@ customization:
 patch:
   schema_list:
     - {schema: pinyin_simp}
+    - {schema: xhup}
     - {schema: zzdyx_mod}
     - {schema: zzdyx_perfect}
     - {schema: zzdyx_single}
