--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,5 +1,5 @@
 var:
-  last_build_time: 1716745850
+  last_build_time: 1716751486
   option:
     ascii_punct: false
     full_shape: false
@@ -8,8 +8,9 @@ var:
   schema_access_time:
     double_pinyin_flypy: 1714512916
     pinyin_simp: 1716715120
+    xhup: 1716751495
     zzdyx_mini: 1716323996
-    zzdyx_mod: 1716745851
+    zzdyx_mod: 1716751556
     zzdyx_mofast: 1715064968
     zzdyx_perfect: 1716743358
     zzdyx_single: 1716659333
