--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -9361,7 +9361,6 @@ bilibili	blbl
 春光融融	cgrr
 成功人士	cgrs
 蚕丝被	cgsb
-春耕生产	cgsc
 春水	cgsd
 蠢事	cgsf
 出国深造	cgsi
@@ -9638,9 +9637,9 @@ bilibili	blbl
 冲上去	chsq
 从何说起	chsq
 城狐社鼠	chss
-畜生	chst
 产生	chst
 沧海桑田	chst
+畜生	chst
 颤声	chsu
 冲上去	chsu
 从何说起	chsu
@@ -9912,7 +9911,6 @@ bilibili	blbl
 常驻机构	cijg
 呈交	cijh
 蹴踞	ciji
-创造价值	ciji
 吃劲	cijl
 此致敬礼	cijl
 存在即合理	cijl
@@ -13922,7 +13920,7 @@ bilibili	blbl
 肠系膜	cvxm
 脆性	cvxn
 出线权	cvxq
-除息	cvxr
+出息	cvxr
 出血	cvxr
 出线权	cvxu
 出险	cvxv
@@ -14767,7 +14765,6 @@ bilibili	blbl
 操作技能	czjn
 才子佳人	czjr
 踩在脚下	czjx
-创造价值	czjz
 垂直领导	czld
 错字连篇	czlp
 程朱理学	czlx
@@ -16257,6 +16254,7 @@ bilibili	blbl
 耽	dfl
 都灵	dflb
 顶楼	dflc
+顶流	dfld
 顶梁	dfld
 丁玲	dflg
 都来	dflh
@@ -17502,7 +17500,6 @@ bilibili	blbl
 当然	djrw
 倒	djs
 当属	djsb
-独家生产	djsc
 倒水	djsd
 度假胜地	djsd
 当事	djsf
@@ -18528,7 +18525,6 @@ bilibili	blbl
 读入	dlrm
 调入	dlrm
 对日	dlrr
-大量生产	dlsc
 登山队	dlsd
 调水	dlsd
 登山队	dlsd
@@ -24239,6 +24235,7 @@ bilibili	blbl
 法制社会	fish
 放之四海而皆准	fisi
 付诸实践	fisj
+发展生产力	fisl
 付诸实施	fiss
 放在首位	fisw
 分子生物学	fisx
@@ -26142,7 +26139,6 @@ bilibili	blbl
 房室传导阻滞	fsci
 妇产科	fsck
 辐辏	fscs
-非生产性	fscx
 房室传导阻滞	fscz
 辐	fsd
 辅导班	fsdb
@@ -27882,9 +27878,9 @@ bilibili	blbl
 发售	fzsj
 发射机	fzsj
 付诸实践	fzsj
-飞逝	fzsk
 发誓	fzsk
 飞逝	fzsk
+发展生产力	fzsl
 发送	fzsm
 发烧	fzsm
 发射	fzsr
@@ -31208,10 +31204,9 @@ bilibili	blbl
 公德	gmdk
 关掉	gmdk
 公德	gmdk
-关灯	gmdm
-关帝庙	gmdm
 公道	gmdm
 关帝庙	gmdm
+关灯	gmdm
 国美电器	gmdq
 关东	gmds
 公敌	gmdt
@@ -31401,14 +31396,13 @@ bilibili	blbl
 馘	gms
 关死	gmsa
 公司	gmsb
-国民生产	gmsc
 关涉	gmsd
 公事	gmsf
 盖世	gmsf
 公司法	gmsf
 公示	gmsg
-国民生产总值	gmsi
 公司制	gmsi
+国民生产总值	gmsi
 公使	gmsj
 高锰酸钾	gmsj
 公社	gmsl
@@ -31422,8 +31416,8 @@ bilibili	blbl
 公孙	gmsv
 盖上	gmsy
 顾名思义	gmsy
-国民生产总值	gmsz
 公司制	gmsz
+国民生产总值	gmsz
 盖天	gmtg
 冠冕堂皇	gmth
 公堂	gmtj
@@ -31724,7 +31718,6 @@ bilibili	blbl
 惯有	gnya
 怪异	gnyb
 怪样	gnyc
-工农业生产	gnyc
 狗娘养的	gnyd
 宫苑	gnye
 惯于	gnyg
@@ -37984,8 +37977,8 @@ GPRS	gprs
 回流	hold
 回落	hole
 回聊	holf
-回廊	holh
 回来	holh
+回廊	holh
 回路	holi
 黑龙江	holj
 患	holk
@@ -37993,7 +37986,6 @@ GPRS	gprs
 黑溜溜	holl
 翙	holl
 回炉	holm
-囫囵	holo
 贿赂	holo
 囫囵	holo
 回笼	holt
@@ -41846,9 +41838,7 @@ GPRS	gprs
 真实感	ifsg
 直率	ifsh
 直升机	ifsj
-直抒	ifsk
 甄	ifsk
-直抒	ifsk
 正手	ifsk
 直视	ifsl
 整数	ifsm
@@ -45059,7 +45049,6 @@ GPRS	gprs
 炸酱	imjh
 总结会	imjh
 糟践	imji
-总价值	imji
 总价	imjj
 炸街	imjk
 炸鸡	imjl
@@ -51371,20 +51360,19 @@ GPRS	gprs
 基石	jfsa
 基数词	jfsc
 见风使舵	jfsd
-救世	jfsf
-聚散	jfsf
-教唆犯	jfsf
 教师法	jfsf
+救世	jfsf
+教唆犯	jfsf
+聚散	jfsf
 酵素	jfsg
 救市	jfsh
 教唆	jfsi
 救世主	jfsi
 教师节	jfsj
 教书匠	jfsj
-棘手	jfsk
 教授	jfsk
-戬	jfsk
 棘手	jfsk
+戬	jfsk
 解放生产力	jfsl
 基数	jfsm
 久负盛名	jfsm
@@ -51747,7 +51735,6 @@ GPRS	gprs
 井然	jgrw
 击碎	jgsa
 均告失败	jgsb
-加工生产	jgsc
 井水	jgsd
 进水	jgsd
 嫁狗随狗	jgsg
@@ -52462,7 +52449,6 @@ GPRS	gprs
 坚贞不渝	jiby
 久治不愈	jiby
 噤	jic
-价值尺度	jicd
 旧臣	jicf
 记者采访	jicf
 叫春	jicg
@@ -52508,7 +52494,6 @@ GPRS	gprs
 建筑工地	jigd
 趼	jigi
 践	jigk
-价值规律	jigl
 旧观念	jign
 君子固穷	jigq
 君子固穷	jigu
@@ -52584,13 +52569,11 @@ GPRS	gprs
 旧框框	jikk
 旧款	jiku
 旧历	jila
-价值连城	jilc
 距离	jilh
 建章立制	jili
 旧例	jilj
 集中力量	jill
 嚼烂	jilm
-价值理念	jiln
 嚼蜡	jilo
 叫驴	jilx
 君主立宪	jilx
@@ -52619,19 +52602,15 @@ GPRS	gprs
 咀	jio
 咀	jiod
 剑走偏锋	jipf
-价值评估	jipg
 记账凭证	jipi
-价值评价	jipj
 甲状旁腺	jipx
 叫屈	jiqb
 鸠占鹊巢	jiqc
 举足轻重	jiqi
-价值千金	jiqj
 旧情	jiqn
 截至去年	jiqn
 旧区	jiqs
 叫去	jiqu
-价值取向	jiqx
 旧	jir
 甲状软骨	jirg
 叫嚷	jiri
@@ -52642,7 +52621,6 @@ GPRS	gprs
 举重若轻	jirq
 截止日期	jirq
 旧日	jirr
-价值认同	jirt
 举重若轻	jiru
 截止日期	jiru
 距	jis
@@ -52679,18 +52657,15 @@ GPRS	gprs
 旧体诗	jits
 唧筒	jitt
 君子坦荡荡，小人长戚戚	jitu
-价值体系	jitx
 旧体制	jitz
 咭	jiu
 叫屈	jiub
 鸠占鹊巢	jiuc
 举足轻重	jiui
-价值千金	jiuj
 旧情	jiun
 截至去年	jiun
 旧区	jius
 叫去	jiuu
-价值取向	jiux
 叫	jiv
 叫	jivv
 叽	jiw
@@ -52919,13 +52894,11 @@ GPRS	gprs
 经济增长	jjii
 仅只	jjii
 介	jjii
-焦作	jjij
 价值	jjij
 假正经	jjij
 焦作	jjij
 仅指	jjik
 假证	jjil
-价值链	jjil
 经济总量	jjil
 经济增长率	jjil
 焦灼	jjim
@@ -52973,7 +52946,6 @@ GPRS	gprs
 佼佼者	jjji
 戒骄戒躁	jjji
 仅仅在	jjji
-经济价值	jjji
 价	jjji
 仅仅	jjjj
 斤斤计较	jjjj
@@ -53287,12 +53259,11 @@ GPRS	gprs
 健壮	jjzh
 假装	jjzh
 焦躁	jjzi
-焦作	jjzj
 价值	jjzj
+假正经	jjzj
 焦作	jjzj
 仅指	jjzk
 假证	jjzl
-价值链	jjzl
 经济总量	jjzl
 经济增长率	jjzl
 焦灼	jjzm
@@ -58471,7 +58442,6 @@ GPRS	gprs
 见诸报端	jzbd
 加班费	jzbf
 价值不菲	jzbf
-加班费	jzbf
 加班	jzbg
 精忠报国	jzbg
 尽忠报国	jzbg
@@ -58492,7 +58462,6 @@ GPRS	gprs
 架	jzc
 加成	jzca
 加查	jzcc
-价值尺度	jzcd
 加菜	jzce
 记者采访	jzcf
 架次	jzch
@@ -58555,9 +58524,7 @@ GPRS	gprs
 加高	jzgh
 加个	jzgj
 加挂	jzgk
-价值规律	jzgl
 加盖	jzgm
-价值观念	jzgn
 加固	jzgo
 加工品	jzgp
 加工区	jzgq
@@ -58614,13 +58581,11 @@ GPRS	gprs
 加宽	jzkn
 加快	jzkn
 加勒比	jzlb
-价值连城	jzlc
 架梁	jzld
 加亮	jzlh
 加仑	jzlj
 集中力量	jzll
 加料	jzlm
-价值理念	jzln
 加榴炮	jzlp
 驾临	jzlu
 加练	jzlx
@@ -58654,19 +58619,15 @@ GPRS	gprs
 加派	jzpd
 加蓬	jzpe
 剑走偏锋	jzpf
-价值评估	jzpg
-价值评价	jzpj
 甲状旁腺	jzpx
 记账凭证	jzpz
 加强	jzqb
 加权	jzqc
 鸠占鹊巢	jzqc
-价值千金	jzqj
 加起来	jzql
 截至去年	jzqn
 加气	jzqt
 架起	jzqu
-价值取向	jzqx
 加钱	jzqy
 举足轻重	jzqz
 甲状软骨	jzrg
@@ -58678,7 +58639,6 @@ GPRS	gprs
 加热器	jzrq
 举重若轻	jzrq
 加热器	jzrq
-价值认同	jzrt
 加热器	jzru
 举重若轻	jzru
 加热器	jzru
@@ -58716,16 +58676,13 @@ GPRS	gprs
 加贴	jzto
 君子坦荡荡，小人长戚戚	jztq
 君子坦荡荡，小人长戚戚	jztu
-价值体系	jztx
 加强	jzub
 加权	jzuc
 鸠占鹊巢	jzuc
-价值千金	jzuj
 加起来	jzul
 截至去年	jzun
 加气	jzut
 架起	jzuu
-价值取向	jzux
 加钱	jzuy
 举足轻重	jzuz
 夹着尾巴	jzwb
@@ -59089,7 +59046,6 @@ GPRS	gprs
 溃堤	kddu
 洘	kdfs
 漷	kdhv
-扩大再生产	kdic
 快刀斩乱麻	kdim
 克敌制胜	kdis
 浍	kdj
@@ -59127,7 +59083,6 @@ GPRS	gprs
 溘然	kdrv
 溘然	kdrw
 渴死	kdsa
-扩大生产	kdsc
 溃散	kdsf
 洭	kdsg
 康定斯基	kdsj
@@ -59146,7 +59101,6 @@ GPRS	gprs
 溃疡	kdyh
 慨当以慷	kdyk
 溃疡性	kdyx
-扩大再生产	kdzc
 快刀斩乱麻	kdzm
 克敌制胜	kdzs
 苦	ke
@@ -59490,7 +59444,6 @@ GPRS	gprs
 考	kfs
 戡	kfs
 克死	kfsa
-可生产	kfsc
 克斯	kfsf
 可视化	kfsh
 可是这	kfsi
@@ -63228,7 +63181,6 @@ GPRS	gprs
 滤色镜	ldsj
 流逝	ldsk
 洛神	ldsl
-劳动生产率	ldsl
 滥杀	ldsm
 梁漱溟	ldsm
 涟	ldsn
@@ -66977,7 +66929,6 @@ GPRS	gprs
 连日	lsrr
 料事如神	lsrs
 历史人物	lsrw
-粮食生产	lssc
 连锁店	lssd
 连手	lssk
 连说	lssl
@@ -76795,10 +76746,8 @@ GPRS	gprs
 铙	nysa
 能言善辩	nysb
 纽约时报	nysb
-农业生产	nysc
 农业示范	nysf
 难以释怀	nysh
-农业生产资料	nysl
 虐杀	nysm
 钕	nyss
 难于上青天	nyst
@@ -76881,7 +76830,6 @@ GPRS	gprs
 泥足巨人	nzjr
 扭转局势	nzjs
 那种激情	nzju
-内在价值	nzjz
 那种快乐	nzkl
 那种渴望	nzkw
 那种力量	nzll
@@ -105644,10 +105592,8 @@ GPRS	gprs
 怦怦直跳	ppit
 平铺直叙	ppix
 批判继承	ppjc
-品牌价值	ppji
 平平静静	ppjj
 品牌建设	ppjs
-品牌价值	ppjz
 乒乓开关	ppkg
 漂漂亮亮	ppll
 破破烂烂	ppll
@@ -106054,7 +106000,6 @@ GPRS	gprs
 簰	ptrr
 笸	pts
 配套设备	ptsb
-配套生产	ptsc
 披头散发	ptsf
 笸	ptsi
 篇首	ptsm
@@ -114456,7 +114401,6 @@ QQ密码	qqmm
 人生几何	rsjh
 软件站	rsji
 如数家珍	rsji
-人生价值	rsji
 软件站	rsji
 如旧	rsji
 如今	rsjj
@@ -114471,7 +114415,6 @@ QQ密码	qqmm
 软件业	rsjy
 软件站	rsjz
 如数家珍	rsjz
-人生价值	rsjz
 软件站	rsjz
 如丧考妣	rskb
 人生苦短	rskd
@@ -115737,7 +115680,6 @@ QQ密码	qqmm
 树杈	sccc
 说曹操曹操到	sccd
 树丛	sccj
-生产厂家	sccj
 松脆	sccv
 松驰	sccx
 司	scd
@@ -115752,7 +115694,6 @@ QQ密码	qqmm
 桫	scdp
 树敌	scdt
 树墩	scdu
-生产单位	scdw
 四川大学	scdx
 虱	sce
 虱	sceo
@@ -115760,22 +115701,17 @@ QQ密码	qqmm
 椹	scfc
 恃才放旷	scfk
 椹	scfm
-生产方式	scfs
 神采飞扬	scfy
 栅格	scgc
 树根	scgc
 搜肠刮肚	scgd
 诗词歌赋	scgf
 树干	scgg
-生产工具	scgj
 树挂	scgk
 树冠	scgl
-生产管理	scgl
 神出鬼没	scgm
 松果	scgo
-生产过剩	scgs
 松果体	scgt
-生产工艺	scgy
 梳	sch
 松花蛋	schd
 松花	sche
@@ -115792,10 +115728,8 @@ QQ密码	qqmm
 述职	scif
 梳妆	scih
 事成之后	scih
-生产总值	scii
 身残志坚	scij
 丝绸之路	scil
-生产资料	scil
 梳着	scim
 树种	scit
 梳妆台	scit
@@ -115843,7 +115777,6 @@ QQ密码	qqmm
 树林	sclc
 三长两短	scld
 死缠烂打	scld
-生产劳动	scld
 松萝	scle
 奢侈浪费	sclf
 梳理	sclg
@@ -115853,7 +115786,6 @@ QQ密码	qqmm
 树林子	scli
 梭	sclm
 梭罗	sclo
-生产力水平	sclp
 输出劳务	sclw
 树龄	scly
 树林子	sclz
@@ -115882,24 +115814,19 @@ QQ密码	qqmm
 思潮起伏	scqf
 势成骑虎	scqh
 身处其中	scqi
-生产潜力	scql
 术前	scqm
 树起	scqu
-生产企业	scqy
 身处其中	scqz
 虱	scr
 松茸	scre
 松仁	scrj
 受宠若惊	scrj
 虱	scrk
-生产日期	scrq
 松软	scrs
-生产日期	scru
 森然	scrv
 森然	scrw
 深藏若虚	scrx
 枢	scs
-生产设备	scsb
 树梢	scsc
 松松	scsc
 松树	scsc
@@ -115913,11 +115840,9 @@ QQ密码	qqmm
 术数	scsm
 栓塞	scsn
 松山	scso
-生产水平	scsp
 松鼠	scsr
 三吹四哨	scss
 术士	scsu
-生产实习	scsx
 树上	scsy
 松涛	sctd
 梳头	sctn
@@ -115927,10 +115852,8 @@ QQ密码	qqmm
 思潮起伏	scuf
 势成骑虎	scuh
 身处其中	scui
-生产潜力	scul
 术前	scum
 树起	scuu
-生产企业	scuy
 身处其中	scuz
 栅	scw
 栅	scwd
@@ -115943,7 +115866,6 @@ QQ密码	qqmm
 树新风	scxf
 树形	scxg
 四处寻找	scxi
-生产许可证	scxi
 松懈	scxn
 似曾相识	scxs
 树形图	scxt
@@ -115952,7 +115874,6 @@ QQ密码	qqmm
 树形图	scxt
 上窜下跳	scxt
 四处寻找	scxz
-生产许可证	scxz
 松原	scya
 生财有道	scyd
 树荫	scye
@@ -115962,7 +115883,6 @@ QQ密码	qqmm
 三朝元老	scyl
 师出有名	scym
 树影	scyr
-生产要素	scys
 术业	scyu
 树阴	scyv
 梭鱼	scyw
@@ -115977,7 +115897,6 @@ QQ密码	qqmm
 事成之后	sczh
 身残志坚	sczj
 丝绸之路	sczl
-生产资料	sczl
 梳着	sczm
 树种	sczt
 梳妆台	sczt
@@ -115988,7 +115907,6 @@ QQ密码	qqmm
 柿子	sczv
 四处张望	sczw
 松针	sczy
-生产总值	sczz
 水	sd
 渗	sd
 深	sd
@@ -116248,9 +116166,10 @@ QQ密码	qqmm
 水利部	sdlb
 沈	sdlc
 势大力沉	sdlc
+水流	sdld
 渗漏	sdld
-沙漏	sdld
 水帘洞	sdld
+沙漏	sdld
 深蓝	sdle
 洒落	sdle
 势单力孤	sdlg
@@ -121246,6 +121165,7 @@ QQ密码	qqmm
 四天	sotg
 山体	sotj
 嵊	sotk
+申通	sotl
 四通	sotl
 山头	sotn
 山田	soto
@@ -122629,21 +122549,16 @@ QQ密码	qqmm
 生存	stca
 生成	stca
 稍迟	stcb
-笥	stcd
 生产队	stcd
+笥	stcd
 剩菜	stce
 适才	stcf
-生产国	stcg
-牲畜	stch
 生产	stch
 牲畜	stch
-桑田沧海	stch
-生产者	stci
 失常	stcj
 矢车菊	stcj
 失措	stck
 生产力	stcl
-生产量	stcl
 生产率	stcl
 生存率	stcl
 稍差	stcm
@@ -122651,16 +122566,13 @@ QQ密码	qqmm
 生财	stco
 生成器	stcq
 生产商	stcs
-生产上	stcs
 失策	stct
 生成器	stcu
 算出	stcv
 私处	stcw
 生成物	stcw
 生产线	stcx
-生产性	stcx
 算错	stcy
-生产者	stcz
 舌	std
 稍大	stda
 舌	stdd
@@ -124465,9 +124377,7 @@ QQ密码	qqmm
 上京	syjh
 释疑解惑	syjh
 十一届三中全会	syjh
-剩余价值	syji
 树欲静而风不止	syji
-使用价值	syji
 上集	syjj
 深一脚浅一脚	syjj
 上街	syjk
@@ -124487,9 +124397,7 @@ QQ密码	qqmm
 上进心	syjx
 上镜	syjy
 上架	syjz
-剩余价值	syjz
 树欲静而风不止	syjz
-使用价值	syjz
 上可	sykf
 上口	syki
 上看	sykk
@@ -129893,7 +129801,6 @@ QQ密码	qqmm
 统计法	txjf
 啼笑皆非	txjf
 统计法	txjf
-体现价值	txji
 统计局	txjj
 统计	txjl
 痛心疾首	txjs
@@ -129901,7 +129808,6 @@ QQ密码	qqmm
 统计图	txjt
 统计学	txjx
 统计员	txjy
-体现价值	txjz
 统考	txkf
 骀	txl
 袒胸露背	txlb
@@ -137986,7 +137892,6 @@ Z	vyz
 喂乳	wirm
 物在人亡	wirw
 闻之色变	wisb
-物质生产	wisc
 吴淞	wisd
 无罪释放	wisf
 吴三桂	wisg
@@ -141160,7 +141065,6 @@ Z	vyz
 无足轻重	wzqz
 物在人亡	wzrw
 闻之色变	wzsb
-物质生产	wzsc
 无罪释放	wzsf
 文字说明	wzsm
 胃主受纳	wzsn
@@ -146676,10 +146580,8 @@ Z	vyz
 行色匆匆	xscc
 刑事处罚	xscf
 嬉春	xscg
-小生产者	xsci
 细水长流	xscl
 信守承诺	xscn
-小生产者	xscz
 信誓旦旦	xsdd
 蓄势待发	xsdf
 邪毒	xsdg
@@ -148811,7 +148713,6 @@ Z	vyz
 有机会	yajh
 研究者	yaji
 原教旨	yaji
-有价值	yaji
 硬件	yajj
 雁	yajj
 厌倦	yajj
@@ -148842,7 +148743,6 @@ Z	vyz
 有加	yajz
 研究者	yajz
 原教旨	yajz
-有价值	yajz
 尤	yak
 有案可查	yakc
 有苦	yake
@@ -159818,7 +159718,6 @@ Z	vyz
 载	zfs
 整死	zfsa
 直爽	zfsa
-正式版	zfsb
 直属	zfsb
 正式版	zfsb
 再生产	zfsc
@@ -162847,7 +162746,6 @@ Z	vyz
 总结	zmjx
 总结性	zmjx
 尊驾	zmjz
-总价值	zmjz
 兆	zmk
 总开关	zmkg
 炸开	zmkg
