20240529-060555：五百词调序。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -1047,6 +1047,7 @@ CPU	cpu
 不再	baif
 不专	baig
 不足	baii
+不住	baij
 不值	baij
 不振	baik
 布置	baio
@@ -4635,9 +4636,9 @@ bilibili	blbl
 颁	bmaj
 并按	bmak
 并案	bman
-半百	bmba
 并不	bmba
 颁布	bmba
+半百	bmba
 不明不白	bmbb
 闭门不出	bmbc
 半百	bmbd
@@ -13142,8 +13143,8 @@ bilibili	blbl
 春秋书法	cusf
 超速	cusf
 城市	cush
-城市化	cush
 超市	cush
+城市化	cush
 唇枪舌战	cusi
 唇枪舌剑	cusj
 趁势	cusk
@@ -17108,9 +17109,9 @@ bilibili	blbl
 代数	djsm
 党史	djso
 担惊受怕	djsp
-当事人	djsr
 当时	djsr
 袋鼠	djsr
+当事人	djsr
 代数式	djss
 大惊失色	djss
 倒算	djst
@@ -17366,13 +17367,8 @@ bilibili	blbl
 打盹	dkdo
 打赌	dkdo
 打地铺	dkdp
-担当起	dkdq
-打的	dkdr
 得到	dkds
-掉到	dkds
-担当起	dkdu
 捣蛋	dkdv
-得多	dkdw
 大快朵颐	dkdy
 打点	dkdy
 打吊针	dkdz
@@ -17650,8 +17646,8 @@ bilibili	blbl
 得时	dksr
 德克萨斯	dkss
 打手势	dkss
-得失	dkst
 打算	dkst
+得失	dkst
 得胜	dksv
 得色	dksw
 搭上	dksy
@@ -18352,8 +18348,8 @@ bilibili	blbl
 递质	dmiq
 道长	dmit
 递增	dmiu
-单子	dmiv
 弟子	dmiv
+单子	dmiv
 兑	dmiw
 断针	dmiy
 单机版	dmjb
@@ -18590,8 +18586,8 @@ bilibili	blbl
 递质	dmzq
 道长	dmzt
 递增	dmzu
-单子	dmzv
 弟子	dmzv
+单子	dmzv
 断针	dmzy
 定	dn
 刀	dn
@@ -19454,7 +19450,6 @@ bilibili	blbl
 东渡	dsdd
 大是大非	dsdf
 东道国	dsdg
-东端	dsdh
 到底	dsdh
 东道主	dsdi
 到达站	dsdi
@@ -19997,9 +19992,8 @@ bilibili	blbl
 等一等	dtyd
 短于	dtyg
 等于	dtyg
-敌意	dtyh
-等一会	dtyh
 答应	dtyh
+敌意	dtyh
 短语	dtyl
 等于零	dtyl
 答允	dtyl
@@ -22740,8 +22734,8 @@ bilibili	blbl
 泛亮	fdlh
 法令	fdlj
 法律界	fdlj
-法兰克	fdlk
 法律	fdlk
+法兰克	fdlk
 法拉利	fdll
 法郎	fdll
 法兰	fdlm
@@ -24097,8 +24091,8 @@ bilibili	blbl
 福晋	fljf
 房交会	fljh
 房脊	fljh
-房价	fljj
 房间	fljj
+房价	fljj
 讽谏	fljl
 费了劲了	fljl
 分裂间期	fljq
@@ -24968,8 +24962,8 @@ bilibili	blbl
 发小儿	fnxe
 发薪	fnxe
 发下	fnxf
-发型	fnxg
 发现	fnxg
+发型	fnxg
 飞旋	fnxh
 飞雪	fnxh
 发现者	fnxi
@@ -28241,8 +28235,8 @@ bilibili	blbl
 更惨	gfcn
 古船	gfcq
 工程师	gfcs
-工程	gfct
 过程	gfct
+工程	gfct
 古城	gfcu
 革除	gfcv
 共处	gfcw
@@ -28439,9 +28433,9 @@ bilibili	blbl
 功劳	gfle
 甘蓝	gfle
 古老	gflf
+过来	gflh
 功率	gflh
 甘露	gflh
-过来	gflh
 过滤嘴	gfli
 过路	gfli
 古兰经	gflj
@@ -28529,8 +28523,8 @@ bilibili	blbl
 过去时	gfqs
 共青团	gfqt
 过气	gfqt
-故去	gfqu
 过去	gfqu
+故去	gfqu
 工钱	gfqy
 各负其责	gfqz
 更弱	gfrb
@@ -28622,8 +28616,8 @@ bilibili	blbl
 过去时	gfus
 共青团	gfut
 过气	gfut
-故去	gfuu
 过去	gfuu
+故去	gfuu
 工钱	gfuy
 各负其责	gfuz
 䢼	gfvv
@@ -28754,8 +28748,8 @@ bilibili	blbl
 干巴巴	ggbb
 规避	ggbb
 干杯	ggbc
-干瘪	ggbh
 干部	ggbh
+干瘪	ggbh
 干爸	ggbm
 瑰宝	ggbn
 干贝	ggbo
@@ -30657,8 +30651,8 @@ bilibili	blbl
 公演	gmyd
 公营	gmye
 谷雨	gmyf
-公元	gmyg
 关于	gmyg
+公元	gmyg
 公元后	gmyh
 公有制	gmyi
 公益金	gmyj
@@ -31159,8 +31153,8 @@ bilibili	blbl
 骨肉	goro
 固然	gorv
 果然	gorv
-固然	gorw
 果然	gorw
+固然	gorw
 国殇	gosa
 果树	gosc
 固沙	gosd
@@ -35543,8 +35537,8 @@ GPRS	gprs
 合奏	hjig
 化妆	hjih
 合资	hjih
-化作	hjij
 合作	hjij
+化作	hjij
 会找	hjik
 会诊	hjil
 含着	hjim
@@ -37024,8 +37018,8 @@ GPRS	gprs
 回流	hold
 回落	hole
 回聊	holf
-回廊	holh
 回来	holh
+回廊	holh
 回路	holi
 黑龙江	holj
 患	holk
@@ -40228,12 +40222,9 @@ GPRS	gprs
 滞压	idya
 汁液	idyd
 淖	idyf
-沾衣	idyh
 注意	idyh
 注音	idyh
-渣打银行	idyh
 滋育	idyh
-长大以后	idyh
 治愈	idyj
 睁大眼睛	idyj
 注意力	idyl
@@ -40595,11 +40586,11 @@ GPRS	gprs
 煮粥	ifib
 支柱	ific
 政治	ifid
-再者	ifif
-政治犯	ifif
-斟酌	ifif
-正直	ifif
 真正	ifif
+正直	ifif
+再者	ifif
+斟酌	ifif
+正职	ifif
 职责	ifig
 真主	ifih
 哉	ifii
@@ -40954,13 +40945,11 @@ GPRS	gprs
 栽植	ifzc
 政治	ifzd
 整治	ifzd
-再者	ifzf
-政治犯	ifzf
-整整	ifzf
-斟酌	ifzf
-正直	ifzf
-正职	ifzf
 真正	ifzf
+正直	ifzf
+再者	ifzf
+斟酌	ifzf
+正职	ifzf
 职专	ifzg
 职责	ifzg
 支座	ifzh
@@ -42373,9 +42362,9 @@ GPRS	gprs
 沾沾自喜	iizx
 只占	iizy
 种族主义	iizy
+做	ij
 作	ij
 债	ij
-做	ij
 佐	ija
 佐	ijaf
 仗	ijak
@@ -45229,8 +45218,8 @@ GPRS	gprs
 自然主义	iriy
 自然资源	iriy
 追歼	irja
-自居	irjb
 自己	irjb
+自居	irjb
 自检	irjc
 自荐	irje
 自救	irjf
@@ -45415,12 +45404,11 @@ GPRS	gprs
 追随	irsv
 致人死亡	irsw
 早日实现	irsx
-峥嵘岁月	irsy
 早上	irsy
-最上	irsy
-知人善用	irsy
 自适应	irsy
 追上	irsy
+峥嵘岁月	irsy
+知人善用	irsy
 昨	irt
 早退	irtb
 昨	irtd
@@ -46480,8 +46468,8 @@ GPRS	gprs
 毡	ity
 长有	itya
 自掏腰包	ityb
-制药厂	ityc
 怎样	ityc
+制药厂	ityc
 重油	ityd
 制药	itye
 重要	ityf
@@ -48606,8 +48594,8 @@ GPRS	gprs
 尽速	jbsf
 既视感	jbsg
 建设者	jbsi
-举不胜举	jbsj
 即使	jbsj
+举不胜举	jbsj
 局势	jbsk
 建设	jbsl
 尽数	jbsm
@@ -49242,11 +49230,11 @@ GPRS	gprs
 激光器	jdgu
 酒馆	jdgw
 济	jdh
-江汉	jdhd
-江河	jdhd
-江淮	jdhd
-江湖	jdhd
 激活	jdhd
+江湖	jdhd
+江河	jdhd
+江汉	jdhd
+江淮	jdhd
 浇花	jdhe
 酒酣	jdhf
 激化	jdhj
@@ -50858,12 +50846,12 @@ GPRS	gprs
 酱肉	jhro
 竟日	jhrr
 就如	jhrs
-决然	jhrv
 竟然	jhrv
-决然	jhrw
-机毁人亡	jhrw
+决然	jhrv
 竟然	jhrw
+决然	jhrw
 竭	jhrw
+机毁人亡	jhrw
 江河日下	jhrx
 将死	jhsa
 惊惶失措	jhsc
@@ -52457,9 +52445,9 @@ GPRS	gprs
 记恨	jlhn
 褯	jlho
 解铃还须系铃人	jlhr
-军火商	jlhs
 计划	jlhs
 计划书	jlhs
+军火商	jlhs
 监理合同	jlht
 讲和	jlht
 计划外	jlhw
@@ -55745,9 +55733,8 @@ GPRS	gprs
 急救	jwjf
 解救	jwjf
 狙击	jwjg
-九五计划	jwjh
-几句话	jwjh
 解决	jwjh
+几句话	jwjh
 急救站	jwji
 几件	jwjj
 极为艰苦	jwjk
@@ -56183,8 +56170,8 @@ GPRS	gprs
 吉星高照	jxgi
 绩效工资	jxgi
 缴公	jxgm
-经国	jxgo
 结果	jxgo
+经国	jxgo
 结构式	jxgs
 经管	jxgt
 结构体	jxgt
@@ -56473,8 +56460,8 @@ GPRS	gprs
 经血	jxxr
 经销商	jxxs
 结胸	jxxv
-经线	jxxx
 继续	jxxx
+经线	jxxx
 经销	jxxy
 教学相长	jxxz
 骥	jxy
@@ -56502,10 +56489,10 @@ GPRS	gprs
 骄阳	jxyv
 九霄云外	jxyw
 结怨	jxyw
-经营性	jxyx
 经验	jxyx
-结缘	jxyx
 绝缘	jxyx
+结缘	jxyx
+经营性	jxyx
 家学渊源	jxyy
 经营者	jxyz
 结业证	jxyz
@@ -58910,9 +58897,7 @@ GPRS	gprs
 看懂	kkdn
 看得起	kkdq
 看的	kkdr
-抗毒素	kkds
 看到	kkds
-看电视	kkds
 抗敌	kkdt
 看得起	kkdu
 看多	kkdw
@@ -59027,7 +59012,6 @@ GPRS	gprs
 看楼	kklc
 抗联	kklf
 揆	kklg
-抗老化	kklh
 看来	kklh
 看了看	kklk
 快快乐乐	kkll
@@ -62241,8 +62225,8 @@ GPRS	gprs
 老去	lfqu
 聊起	lfqu
 老弱	lfrb
-两人	lfrj
 老人	lfrj
+两人	lfrj
 老人家	lfrj
 老人们	lfrm
 两日	lfrr
@@ -62321,6 +62305,7 @@ GPRS	gprs
 老千	lfut
 老气	lfut
 聊起	lfuu
+老	lfw
 聊	lfw
 两碗	lfwa
 老屋	lfwb
@@ -62338,6 +62323,7 @@ GPRS	gprs
 老顽童	lfwt
 聊	lfwv
 老外	lfww
+老	lfww
 鬣	lfx
 两厢	lfxa
 老朽	lfxc
@@ -62693,8 +62679,8 @@ GPRS	gprs
 雷电	lhdo
 连哄带骗	lhdp
 来的	lhdr
-利害得失	lhds
 来到	lhds
+利害得失	lhds
 立等	lhdt
 离地	lhdu
 离队	lhdv
@@ -63443,6 +63429,8 @@ GPRS	gprs
 令	lj
 领	lj
 例	lja
+领	lja
+领	ljaj
 令爱	ljam
 僚	ljar
 令嫒	ljas
@@ -69750,8 +69738,8 @@ GPRS	gprs
 默哀	moah
 默	moak
 眠	mob
-岷	mobc
 目标	mobc
+岷	mobc
 瞒报	mobk
 墨宝	mobn
 墨笔	mobt
@@ -71831,9 +71819,9 @@ GPRS	gprs
 尿性	nbxn
 那些	nbxy
 那有	nbya
+那样	nbyc
 尿样	nbyc
 那一次	nbyc
-那样	nbyc
 尿液	nbyd
 那不一定	nbyd
 那英	nbye
@@ -73091,8 +73079,8 @@ GPRS	gprs
 脑力劳动	nlld
 难离	nllh
 难料	nllm
-农历年	nlln
 能力	nlln
+农历年	nlln
 能量	nllr
 难留	nllw
 努力练习	nllx
@@ -73601,9 +73589,9 @@ GPRS	gprs
 内切圆	noqy
 睨	nor
 嵲	norc
+男人	norj
 内人	norj
 内燃机	norj
-男人	norj
 内热	nork
 内柔	norl
 内燃	norm
@@ -104861,8 +104849,8 @@ GPRS	gprs
 强震	qbih
 群主	qbih
 群众中	qbii
-情不自禁	qbij
 群众	qbij
+情不自禁	qbij
 屈指	qbik
 强制力	qbil
 屈尊	qbim
@@ -104995,8 +104983,8 @@ GPRS	gprs
 强壮	qbzh
 强震	qbzh
 群主	qbzh
-情不自禁	qbzj
 群众	qbzj
+情不自禁	qbzj
 屈指	qbzk
 强制力	qbzl
 屈尊	qbzm
@@ -105242,10 +105230,10 @@ GPRS	gprs
 清白	qdbr
 渠	qdc
 浅层	qdcb
-柒	qdcc
 清楚	qdcc
-启动菜单	qdcd
+柒	qdcc
 清澈	qdcd
+启动菜单	qdcd
 沏茶	qdce
 清醇	qdcf
 汽车股	qdcg
@@ -109313,9 +109301,9 @@ QQ密码	qqmm
 悄悄来到	quld
 起浪	quld
 起落	qule
-强强联合	qulh
 起来	qulh
 起立	qulh
+强强联合	qulh
 去路	quli
 起落架	qulj
 悄悄离开	qulk
@@ -114488,7 +114476,6 @@ QQ密码	qqmm
 散放	sffh
 十分之	sffi
 十分钟	sffi
-丧父	sffm
 十分	sffm
 是非分明	sffm
 赏罚分明	sffm
@@ -114548,9 +114535,9 @@ QQ密码	qqmm
 十字	sfin
 收放自如	sfir
 酸枣仁	sfir
-四分之三	sfis
 甚至	sfis
 甚至是	sfis
+四分之三	sfis
 十种	sfit
 丧志	sfiu
 丧子	sfiv
@@ -115295,9 +115282,9 @@ QQ密码	qqmm
 商船	shcq
 神话传说	shcs
 瘦长	shct
+市场	shcu
 商场	shcu
 商城	shcu
-市场	shcu
 庶出	shcv
 痧	shd
 山河大地	shdd
@@ -115472,8 +115459,10 @@ QQ密码	qqmm
 熟女	shns
 衰年	shnt
 施虐	shny
+市	sho
 衰	sho
 疝	shoi
+市	shoi
 衰	show
 神魂飘荡	shpd
 商品房	shpf
@@ -115827,8 +115816,8 @@ QQ密码	qqmm
 嗖	sirl
 逝者如斯	sirs
 虽然	sirv
-事在人为	sirw
 虽然	sirw
+事在人为	sirw
 始终如一	siry
 虽然有	siry
 虽属	sisb
@@ -117006,8 +116995,8 @@ QQ密码	qqmm
 识货	slhj
 谇	slhj
 诗行	slhk
-神话	slhl
 说话	slhl
+神话	slhl
 说谎	slhl
 圣火	slhm
 试航	slhq
@@ -117567,13 +117556,8 @@ QQ密码	qqmm
 苏门答腊	smdl
 送单	smdm
 送电	smdo
-世贸大厦	smds
 受到	smds
-善妒	smds
-数得上	smds
-杀到	smds
-烧到	smds
-送到	smds
+世贸大厦	smds
 杀敌	smdt
 数独	smdw
 什么东西	smdx
@@ -118171,8 +118155,6 @@ QQ密码	qqmm
 实话说	snhy
 守护者	snhz
 召	sni
-三年之艾	snia
-守在	snia
 实在	snia
 实职	snif
 宿醉	snif
@@ -118417,8 +118399,6 @@ QQ密码	qqmm
 实用型	snyx
 实用性	snyx
 实验	snyx
-三年之艾	snza
-守在	snza
 实在	snza
 实职	snzf
 宿醉	snzf
@@ -119273,7 +119253,6 @@ QQ密码	qqmm
 所系	sqxw
 失去信心	sqxx
 所吸引	sqxy
-所愿	sqya
 所有	sqya
 所引	sqyb
 所要	sqyf
@@ -120114,8 +120093,8 @@ QQ密码	qqmm
 笥	stcd
 剩菜	stce
 适才	stcf
-牲畜	stch
 生产	stch
+牲畜	stch
 失常	stcj
 矢车菊	stcj
 失措	stck
@@ -120758,7 +120737,6 @@ QQ密码	qqmm
 肾虚	suxy
 声压	suya
 声源	suyd
-声言	suyh
 声音	suyh
 首屈一指	suyi
 声优	suyj
@@ -120885,8 +120863,8 @@ QQ密码	qqmm
 胜仗	svij
 收执	svik
 随之	svil
-臊子面	svim
 随着	svim
+臊子面	svim
 收账	svio
 收自	svir
 孙中山	svis
@@ -123568,8 +123546,8 @@ QQ密码	qqmm
 天干物燥	tgwz
 天相	tgxc
 天晓得	tgxd
-吞下	tgxf
 天下	tgxf
+吞下	tgxf
 天仙子	tgxi
 天蝎座	tgxi
 透过现象看本质	tgxi
@@ -124519,8 +124497,8 @@ QQ密码	qqmm
 托辞	tkct
 推辞	tkct
 探测器	tkcu
-推出	tkcv
 提出	tkcv
+推出	tkcv
 提纯	tkcx
 挑错	tkcy
 挺大	tkda
@@ -124566,12 +124544,12 @@ QQ密码	qqmm
 提过	tkgf
 提供给	tkgg
 提干	tkgg
-抬高	tkgh
-推广	tkgh
 提高	tkgh
+推广	tkgh
+抬高	tkgh
 提供者	tkgi
-掭	tkgj
 提供	tkgj
+掭	tkgj
 抟	tkgk
 挺括	tkgk
 投稿人	tkgr
@@ -127833,8 +127811,8 @@ QQ密码	qqmm
 强震	ubih
 群主	ubih
 群众中	ubii
-情不自禁	ubij
 群众	ubij
+情不自禁	ubij
 屈指	ubik
 强制力	ubil
 屈尊	ubim
@@ -127965,8 +127943,8 @@ QQ密码	qqmm
 强壮	ubzh
 强震	ubzh
 群主	ubzh
-情不自禁	ubzj
 群众	ubzj
+情不自禁	ubzj
 屈指	ubzk
 屈尊	ubzm
 群中	ubzo
@@ -128206,10 +128184,10 @@ QQ密码	qqmm
 清白	udbr
 渠	udc
 浅层	udcb
-柒	udcc
 清楚	udcc
-启动菜单	udcd
+柒	udcc
 清澈	udcd
+启动菜单	udcd
 沏茶	udce
 清醇	udcf
 汽车股	udcg
@@ -132138,8 +132116,8 @@ QQ空间	uukj
 悄悄来到	uuld
 起浪	uuld
 起落	uule
-强强联合	uulh
 起来	uulh
+强强联合	uulh
 去路	uuli
 起落架	uulj
 悄悄离开	uulk
@@ -134160,10 +134138,10 @@ Z	vyz
 玩儿	wgew
 温故而知新	wgex
 无纺布	wgfb
-五谷丰登	wgfd
 无法	wgfd
-王法	wgfd
 违法	wgfd
+五谷丰登	wgfd
+王法	wgfd
 王菲	wgfe
 武夫	wgfg
 外感风寒	wgfh
@@ -134685,7 +134663,6 @@ Z	vyz
 文豪	whhh
 文号	whhi
 文化	whhj
-文化局	whhj
 文化界	whhj
 文化节	whhj
 文化课	whhk
@@ -135569,10 +135546,10 @@ Z	vyz
 微温	wkwd
 微弯	wkwh
 无可挽回	wkwh
-往外看	wkwk
 往往	wkwk
 微微	wkwk
 无可无不可	wkwk
+往外看	wkwk
 往外流	wkwl
 挽	wkwo
 往外跑	wkwp
@@ -138860,8 +138837,8 @@ Z	vyz
 相劝	xcul
 现场确认	xcur
 相切	xcus
-想去	xcuu
 想起	xcuu
+想去	xcuu
 相欠	xcuw
 橡	xcw
 想歪	xcwa
@@ -139663,8 +139640,8 @@ Z	vyz
 西门子	xfmi
 西门	xfmj
 熙	xfmm
-醒目	xfmo
 项目	xfmo
+醒目	xfmo
 献媚	xfms
 西敏寺	xfms
 西方媒体	xfmt
@@ -141170,10 +141147,10 @@ Z	vyz
 信息量	xjxl
 休学	xjxn
 肖像权	xjxq
-休息	xjxr
-休息日	xjxr
 信息	xjxr
+休息	xjxr
 闲暇	xjxr
+休息日	xjxr
 休息室	xjxs
 信邪	xjxs
 相机行事	xjxs
@@ -142953,12 +142930,10 @@ Z	vyz
 小型	xpxg
 小雪	xpxh
 小型机	xpxj
-嘻皮笑脸	xpxl
-嬉皮笑脸	xpxl
-小写	xpxl
 小心	xpxl
-小戏	xpxl
-小熊	xpxl
+小写	xpxl
+嬉皮笑脸	xpxl
+嘻皮笑脸	xpxl
 小熊猫	xpxm
 小学	xpxn
 小小	xpxp
@@ -145592,8 +145567,8 @@ Z	vyz
 有据	yajk
 有纪律	yajl
 餍	yajl
-压惊	yajn
 研究	yajn
+压惊	yajn
 愿景	yajr
 研究室	yajs
 研究所	yajs
@@ -145866,10 +145841,9 @@ Z	vyz
 有一点	yayd
 硬要	yayf
 压抑感	yayg
+愿意	yayh
 原意	yayh
 又爱又恨	yayh
-愿意	yayh
-有一回	yayh
 有意者	yayi
 厌氧菌	yayj
 有意见	yayj
@@ -146562,7 +146536,6 @@ Z	vyz
 油爆	ydbm
 胰蛋白酶	ydbm
 沿边	ydbn
-一笔钱	ydbq
 一般	ydbq
 一般人	ydbr
 一把手	ydbs
@@ -147807,7 +147780,6 @@ Z	vyz
 雨中	yfio
 亚洲人	yfir
 应付自如	yfir
-一番折腾	yfit
 严重	yfit
 燕赵	yfiu
 要走	yfiu
@@ -148043,7 +148015,6 @@ Z	vyz
 雨中	yfzo
 亚洲人	yfzr
 应付自如	yfzr
-一番折腾	yfzt
 严重	yfzt
 燕赵	yfzu
 要走	yfzu
@@ -150460,9 +150431,7 @@ Z	vyz
 越来越多	ylyd
 预演	ylyd
 又要	ylyf
-又一个	ylyg
 永远	ylyg
-越来越高	ylyg
 语言	ylyh
 语音	ylyh
 谣言	ylyh
@@ -152070,8 +152039,8 @@ Z	vyz
 延展性	yrzx
 引人注意	yrzy
 晕针	yrzy
-与	ys
 医	ys
+与	ys
 尧	ysa
 尧	ysac
 雅安	ysan
@@ -152426,12 +152395,14 @@ Z	vyz
 尧舜禹	yssy
 饮水思源	yssy
 妖	yst
+医	yst
 姨太	ysta
 伊斯坦布尔	yste
 牙疼	ysth
 移山填海	ysth
 与他	ystj
 轶	ystk
+医	ystk
 与它	ystn
 一视同仁	ystr
 与她	ysts
@@ -152874,9 +152845,9 @@ Z	vyz
 袁隆平	yulp
 以强凌弱	yulr
 一起聊天	yult
+越来越	yuly
 一千零一夜	yuly
 眼前利益	yuly
-越来越	yuly
 业力	yulz
 一起命案	yuma
 盐民	yumb
@@ -155732,12 +155703,9 @@ Z	vyz
 滞压	zdya
 汁液	zdyd
 淖	zdyf
-沾衣	zdyh
 注意	zdyh
 注音	zdyh
-渣打银行	zdyh
 滋育	zdyh
-长大以后	zdyh
 沾	zdyi
 治愈	zdyj
 睁大眼睛	zdyj
@@ -156102,13 +156070,11 @@ Z	vyz
 栽植	zfic
 政治	zfid
 整治	zfid
-再者	zfif
-政治犯	zfif
-整整	zfif
-斟酌	zfif
-正直	zfif
-正职	zfif
 真正	zfif
+正直	zfif
+再者	zfif
+斟酌	zfif
+正职	zfif
 职专	zfig
 职责	zfig
 支座	zfih
@@ -156475,13 +156441,11 @@ Z	vyz
 煮粥	zfzb
 支柱	zfzc
 政治	zfzd
-再者	zfzf
-政治犯	zfzf
-整整	zfzf
-斟酌	zfzf
-正直	zfzf
-正职	zfzf
 真正	zfzf
+正直	zfzf
+再者	zfzf
+斟酌	zfzf
+正职	zfzf
 职责	zfzg
 真主	zfzh
 政治家	zfzj
@@ -160729,12 +160693,11 @@ Z	vyz
 追随	zrsv
 致人死亡	zrsw
 早日实现	zrsx
-峥嵘岁月	zrsy
 早上	zrsy
-最上	zrsy
-知人善用	zrsy
 自适应	zrsy
 追上	zrsy
+峥嵘岁月	zrsy
+知人善用	zrsy
 追随者	zrsz
 昨	zrt
 早退	zrtb
@@ -160743,16 +160706,16 @@ Z	vyz
 最疼	zrth
 自叹	zrti
 自投	zrtk
-自通	zrtl
 追讨	zrtl
+自通	zrtl
 追逃	zrtm
 在人体内	zrtn
 重如泰山	zrts
 自强	zrub
 自洽	zrud
 阵容强大	zrud
-早期	zruf
 追求	zruf
+早期	zruf
 自然奇观	zrug
 自弃	zruh
 最全	zruj
