--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -11695,6 +11695,7 @@ bilibili	blbl
 虫病	cobh
 崇拜者	cobi
 崇拜	cobk
+财报	cobk
 串并联	cobl
 财宝	cobn
 财帛	cobr
@@ -133925,10 +133926,11 @@ Z	vyz
 玩儿	wgew
 温故而知新	wgex
 无纺布	wgfb
-无法	wgfd
 违法	wgfd
+玩法	wgfd
 五谷丰登	wgfd
 王法	wgfd
+无法	wgfd
 王菲	wgfe
 武夫	wgfg
 外感风寒	wgfh
@@ -146870,8 +146872,6 @@ Z	vyz
 一台	ydtl
 一条龙	ydtl
 一通	ydtl
-有点头脑	ydtn
-液态奶	ydtn
 源头	ydtn
 油田	ydto
 游艇	ydtq
