--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -38238,8 +38238,8 @@ GPRS	gprs
 和协	htxf
 滑天下之大稽	htxj
 秽行	htxk
-后天下之乐而乐	htxl
 和谐	htxl
+后天下之乐而乐	htxl
 和稀泥	htxn
 和煦	htxr
 和血	htxr
@@ -46197,9 +46197,7 @@ GPRS	gprs
 自讨没趣	itmu
 怎么	itmw
 种马	itmx
-怎么也	itmy
 怎么样	itmy
-怎么说	itmy
 造	itn
 怎奈	itna
 重难点	itnd
@@ -55726,6 +55724,7 @@ GPRS	gprs
 计无所出	jwsc
 九十二	jwse
 解散	jwsf
+急事	jwsf
 几十个	jwsg
 据我所知	jwsi
 节外生枝	jwsi
@@ -116507,8 +116506,8 @@ QQ密码	qqmm
 授时	sksr
 搜身	sksr
 手术室	skss
-手术台	skst
 损失	skst
+手术台	skst
 摄氏	sksw
 手书	sksx
 深刻思想	sksx
@@ -139345,10 +139344,10 @@ Z	vyz
 先发制人	xfir
 下至	xfis
 协奏曲	xfiu
+鞋子	xfiv
 下肢	xfiv
-孝子	xfiv
 靴子	xfiv
-项坠	xfiv
+孝子	xfiv
 下周	xfiw
 巷战	xfiy
 靴	xfj
@@ -139856,6 +139855,7 @@ Z	vyz
 下个星期	xgxq
 下个星期	xgxu
 现象	xgxw
+形象	xgxw
 现象学	xgxx
 狭管效应	xgxy
 现有	xgya
@@ -146802,7 +146802,6 @@ Z	vyz
 溵	ydqw
 以大欺小	ydqx
 油钱	ydqy
-一起抓	ydqz
 汩	ydr
 洋人	ydrj
 渔人	ydrj
@@ -146818,7 +146817,6 @@ Z	vyz
 一日游	ydry
 游刃	ydrz
 淹死	ydsa
-亚的斯亚贝巴	ydsb
 约定俗成	ydsc
 油水	ydsd
 渊薮	ydse
@@ -146826,7 +146824,6 @@ Z	vyz
 一首歌	ydsg
 演示	ydsg
 一勺烩	ydsh
-有的时候	ydsh
 一生中	ydsi
 一瞬间	ydsj
 一神教	ydsj
@@ -146856,7 +146853,6 @@ Z	vyz
 液态	ydta
 一弹	ydtb
 原地踏步	ydtb
-有点特别	ydtb
 油桐	ydtc
 油桶	ydtc
 一滩	ydtd
@@ -153455,11 +153451,10 @@ Z	vyz
 鸳	ywwd
 与我无关	ywwg
 疑问句	ywwg
-一望无际	ywwj
 疑问	ywwj
+饮	ywwj
 疑问句	ywwj
 逸闻	ywwj
-饮	ywwj
 饮	ywwk
 疑为	ywwm
 用完	ywwn
