--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -115604,9 +115604,7 @@ QQ密码	qqmm
 嗓门儿	sime
 实至名归	simg
 嘶鸣	simi
-受灾面积	simj
 嗓门	simj
-山真面目	simm
 嗍	simv
 始终没有	simy
 噻	sin
@@ -115642,7 +115640,6 @@ QQ密码	qqmm
 虽然	sirw
 事在人为	sirw
 始终如一	siry
-虽然有	siry
 虽属	sisb
 适者生存	sisc
 啥事	sisf
@@ -117356,7 +117353,6 @@ QQ密码	qqmm
 首	smd
 送达	smda
 首	smdd
-什么地方	smdf
 首都	smdf
 杀毒	smdg
 煽动	smdg
@@ -119179,13 +119175,10 @@ QQ密码	qqmm
 时光	srgj
 曙光	srgj
 输入功能	srgn
-虽然过去	srgq
 深入骨髓	srgs
 身管	srgt
-虽然过去	srgu
 时隔	srgv
 顺滑	srhd
-虽然很好	srhh
 声如洪钟	srhi
 时候	srhj
 是何	srhj
@@ -119252,7 +119245,6 @@ QQ密码	qqmm
 世人皆知	srjz
 时刻表	srkb
 视如寇仇	srkc
-虽然看到	srkd
 速溶咖啡	srkf
 时空观	srkg
 时刻	srkh
@@ -119262,7 +119254,6 @@ QQ密码	qqmm
 生日快乐	srkl
 顺口溜	srkl
 时空	srkn
-虽然可能	srkn
 是可忍	srkr
 深入开展	srkz
 鼠	srl
@@ -119275,7 +119266,6 @@ QQ密码	qqmm
 损人利己	srlj
 时令	srlj
 蒜蓉辣酱	srlj
-虽然离开	srlk
 势如累卵	srll
 叟	srll
 鼠类	srlm
@@ -119294,9 +119284,7 @@ QQ密码	qqmm
 射门	srmj
 杀人灭口	srmk
 骚人墨客	srmk
-虽然忙碌	srml
 晱	srmm
-虽然没能	srmn
 世人面前	srmq
 私人秘书	srms
 世人面前	srmu
@@ -119304,13 +119292,10 @@ QQ密码	qqmm
 深入民心	srmx
 是没有	srmy
 顺逆	srnm
-虽然年轻	srnq
 时年	srnt
-虽然年轻	srnu
 湿热内蕴	srny
 曙	sro
 曙	srof
-虽然平凡	srpf
 身旁	srph
 势如破竹	srpi
 射偏	srpj
@@ -119343,8 +119328,6 @@ QQ密码	qqmm
 手如柔荑	srrt
 深入人心	srrx
 射死	srsa
-输入输出设备	srsb
-输入输出	srsc
 顺水	srsd
 时蔬	srse
 时事	srsf
@@ -119355,12 +119338,12 @@ QQ密码	qqmm
 顺时针	srsi
 时尚	srsj
 石蕊试剂	srsj
-顺势	srsk
+身手	srsk
 顺手	srsk
+顺势	srsk
 是谁	srsl
 射杀	srsm
 市容市貌	srsm
-是什么	srsm
 身受	srsm
 顺遂	srsm
 收入水平	srsp
@@ -119377,7 +119360,6 @@ QQ密码	qqmm
 顺天	srtg
 昇	srti
 身体	srtj
-虽然痛苦	srtk
 晒台	srtl
 晒图	srto
 深入探讨	srtt
@@ -119391,7 +119373,6 @@ QQ密码	qqmm
 身前	srum
 时期内	srun
 身躯	srur
-收容遣送	srus
 时区	srus
 暑气	srut
 顺气	srut
@@ -119404,7 +119385,6 @@ QQ密码	qqmm
 是谓	srwl
 身为	srwm
 晒网	srwo
-私人物品	srwp
 晌午	srwt
 匙	srww
 时务	srww
@@ -119414,18 +119394,16 @@ QQ密码	qqmm
 时下	srxf
 身形	srxg
 鼠须管	srxg
-时序	srxh
 时效	srxh
+时序	srxh
 顺序	srxh
 深入细致	srxi
 时行	srxk
-虽然辛苦	srxk
 身心	srxl
 顺心	srxl
 时兴	srxn
 射向	srxr
 三人行，必有我师	srxs
-输入系统	srxt
 身陷	srxv
 时鲜	srxw
 射线	srxx
@@ -119971,11 +119949,11 @@ QQ密码	qqmm
 失魂	sthg
 生孩子	sthi
 生还者	sthi
+适合	sthj
 升华	sthj
+稍候	sthj
 生态环境	sthj
 私货	sthj
-稍候	sthj
-适合	sthj
 失衡	sthk
 伤天害理	sthl
 失火	sthm
@@ -122026,15 +122004,10 @@ QQ密码	qqmm
 十指连心	szlx
 水中捞月	szly
 实至名归	szmg
-受灾面积	szmj
-山真面目	szmm
-始终没有	szmy
-实在难得	sznd
 肾主纳气	sznq
 肾主纳气	sznu
 收支平衡	szph
 耍嘴皮子	szpz
-始终强调	szqd
 生殖器官	szqg
 三中全会	szqh
 涉足其间	szqj
@@ -143572,8 +143545,8 @@ Z	vyz
 协同作战	xtii
 小兔崽子	xtii
 先做	xtij
-先哲	xtik
 选择	xtik
+先哲	xtik
 先祖	xtil
 先兆	xtim
 笑着	xtim
@@ -146782,17 +146755,14 @@ Z	vyz
 一期	ydqf
 油漆工	ydqg
 一齐	ydqh
-一起抓	ydqi
 沂	ydqi
 一俟	ydqj
 一拳	ydqm
 一曲	ydqo
-一群群	ydqq
 一群人	ydqr
 涌泉	ydqr
 源泉	ydqr
 一切	ydqs
-一起上	ydqs
 油气	ydqt
 油气田	ydqt
 洋气	ydqt
