20240529-182920：删词、加词、加持。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -53023,7 +53023,7 @@ GPRS	gprs
 家传	jncj
 家常	jncj
 举措	jnck
-加持力	jncl
+加持	jnck
 加词	jncl
 惊诧	jncl
 加粗	jncm
@@ -120846,7 +120846,6 @@ QQ密码	qqmm
 甩	swcc
 饲	swcd
 伤亡惨重	swci
-事务处理	swcl
 删词	swcl
 色差	swcm
 色彩	swcm
